--- a/clipboard/index.html
+++ b/clipboard/index.html
@@ -16,7 +16,7 @@
   <body>
     <!-- Hero Section -->
     <section id="hero">
-      <div class="section-container mb-40 px-10 pt-16">
+      <div class="section-container mb-40 pt-16">
         <img src="images/logo.svg" alt="Clipboard logo" class="mx-auto my-16" />
         <h3>A history of everything you copy</h3>
         <p class="max-w-3xl mx-auto mb-10 text-2xl text-grayishBlue">
@@ -40,15 +40,67 @@
     </section>
     <!-- Snippets section -->
     <section id="snippets">
-      <div class="section-container my-20 px-10">
+      <div class="section-container my-20">
         <h3>Keep track of your Snippets</h3>
-        <p
-          class="max-w-3xl mx-auto mb-24 text-xl leading-9 text-center text-grayishBlue"
-        >
+        <p class="section-paragraph">
           Clipboard instantly stores any item you copy in the cloud,meaning you
           can access your snippets immediately on all your devices. Our Mac and
           iOS apps will help you organize everything.
         </p>
+      </div>
+    </section>
+    <!-- features section -->
+    <section id="features">
+      <div class="section-container my-20">
+        <div class="relative flex flex-col md:flex-row md:space-x-32">
+          <!--image-->
+          <div class="md:w-1/2">
+            <img
+              src="images/image-computer.png"
+              alt="computer"
+              class="md:absolute top-0 right-[50%]"
+            />
+          </div>
+          <!--text container-->
+          <div
+            class="flex flex-col mt-16 mb-24 space-y-12 text-xl md:w-1/2 md:mb-60 md:text-left md:pl-16"
+          >
+            <!--Item1-->
+            <div>
+              <h5>Quick Search</h5>
+              <p class="max-w-md text-grayishBlue">
+                Easily search your snippets by content, category, web address,
+                application and more
+              </p>
+            </div>
+            <!--Item2-->
+            <div>
+              <h5>iCloud Sync</h5>
+              <p class="max-w-md text-grayishBlue">
+                Instantly stores any item you copy in the cloud
+              </p>
+            </div>
+            <!--Item3-->
+            <div>
+              <h5>Complete History</h5>
+              <p class="max-w-md text-grayishBlue">
+                Easily retrieve your snippets from the first moment you start
+                using your application
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--Access section-->
+    <section id="access">
+      <div class="section-container my-20">
+        <h3>Access Clipboard AnyWhere</h3>
+        <p class="section-paragraph">
+          Whether you're are on go, or at your computer, you can access all your
+          Clipboard snippets in a few simple clicks.
+        </p>
+        <img src="images/image-devices.png" alt="devices" class="mx-auto" />
       </div>
     </section>
   </body>
