--- a/clipboard/index.html
+++ b/clipboard/index.html
@@ -42,7 +42,7 @@
     <section id="snippets">
       <div class="section-container my-20">
         <h3>Keep track of your Snippets</h3>
-        <p class="section-paragraph">
+        <p class="section-paragraph mb-24">
           Clipboard instantly stores any item you copy in the cloud,meaning you
           can access your snippets immediately on all your devices. Our Mac and
           iOS apps will help you organize everything.
@@ -96,11 +96,52 @@
     <section id="access">
       <div class="section-container my-20">
         <h3>Access Clipboard AnyWhere</h3>
-        <p class="section-paragraph">
+        <p class="section-paragraph mb-24">
           Whether you're are on go, or at your computer, you can access all your
           Clipboard snippets in a few simple clicks.
         </p>
         <img src="images/image-devices.png" alt="devices" class="mx-auto" />
+      </div>
+    </section>
+    <!--supercharge section-->
+    <section id="supercharge">
+      <div class="section-container my-20">
+        <h3>Supercharge your work flow</h3>
+        <p class="section-paragraph mb-16">
+          We've got the tools to boost your productivity.
+        </p>
+        <!--Items-->
+        <div
+          class="flex flex-col items-center justify-between space-y-16 md:flex-row md:space-y-0 md:space-x-12"
+        >
+          <!--Item 1-->
+          <div class="flex flex-col items-center space-y-5">
+            <img src="images/icon-blacklist.svg" alt="" class="mb-6" />
+            <h5>Create BlackList</h5>
+            <p class="max-w-md text-grayishBlue">
+              Easily search your snippets by content, category, web address,
+              application, and more.
+            </p>
+          </div>
+          <!--Item 2-->
+          <div class="flex flex-col items-center space-y-5">
+            <img src="images/icon-text.svg" alt="" class="mb-6" />
+            <h5>Plain Text Snippet</h5>
+            <p class="max-w-md text-grayishBlue">
+              Easily search your snippets by content, category, web address,
+              application, and more.
+            </p>
+          </div>
+          <!--Item 3-->
+          <div class="flex flex-col items-center space-y-5">
+            <img src="images/icon-preview.svg" alt="" class="mb-6" />
+            <h5>Sneak Preview</h5>
+            <p class="max-w-md text-grayishBlue">
+              Easily search your snippets by content, category, web address,
+              application, and more.
+            </p>
+          </div>
+        </div>
       </div>
     </section>
   </body>
