--- a/clipboard/index.html
+++ b/clipboard/index.html
@@ -25,16 +25,8 @@
         </p>
         <!-- Button Container -->
         <div class="button-container">
-          <a
-            href=""
-            class="p-4 px-8 rounded-full shadow-lg bg-strongCyan duration-200 hover:opacity-80"
-            >Download for iOS</a
-          >
-          <a
-            href=""
-            class="p-4 px-8 rounded-full shadow-lg bg-lightBlue duration-200 hover:opacity-80"
-            >Download for Mac</a
-          >
+          <a href="" class="bg-strongCyan hrefButton">Download for iOS</a>
+          <a href="" class="bg-lightBlue hrefButton">Download for Mac</a>
         </div>
       </div>
     </section>
@@ -144,5 +136,94 @@
         </div>
       </div>
     </section>
+    <!--References section-->
+    <section id="references">
+      <div
+        class="flex flex-col items-center justify-between max-w-6xl px-10 mx-auto space-y-16 my-44 md:flex-row md:space-y-0"
+      >
+        <img src="images/logo-google.png" alt="Google" />
+        <img src="images/logo-ibm.png" alt="IBM" />
+        <img src="images/logo-microsoft.png" alt="Microsoft" />
+        <img src="images/logo-hp.png" alt="HP" />
+        <img src="images/logo-vector-graphics.png" alt="Vector Graphics" />
+      </div>
+    </section>
+    <!--CTA-->
+    <section id="cta">
+      <div class="section-container my-20">
+        <h3>Clipboard for iOS and MacOS</h3>
+        <p class="section-paragraph mb-10">
+          Availabele for free on App store. Download for Mac or iOS with iCloud
+          and you're ready to start adding to your clipboard.
+        </p>
+        <!--button container-->
+        <div class="button-container">
+          <a href="" class="bg-strongCyan hrefButton">Download for iOS</a>
+          <a href="" class="bg-lightBlue hrefButton">Download for Mac</a>
+        </div>
+      </div>
+    </section>
+    <!--footer section-->
+    <footer class="bg-gray-50">
+      <div class="section-container">
+        <div class="flex flex-col items-center justify-between md:flex-row">
+          <!--image-->
+          <img src="images/logo.svg" alt="" class="scale-50" />
+          <!-- menu and social container -->
+          <div
+            class="flex flex-col items-center justify-between flex-1 mb-10 space-y-6 md:flex-row md:mb-0 md:space-y-0 text-grayishBlue"
+          >
+            <!--menus-->
+            <div
+              class="flex flex-col space-y-4 md:flex-row md:ml-24 md:space-y-0 md:space-x-24"
+            >
+              <!--menu1-->
+              <div class="flex flex-col space-y-4 text-center md:text-left">
+                <div><a href="#" class="hover:text-strongCyan">FAQs</a></div>
+                <div>
+                  <a href="#" class="hover:text-strongCyan">Contact Us</a>
+                </div>
+              </div>
+              <!--menu2-->
+              <div class="flex flex-col space-y-4 text-center md:text-left">
+                <div>
+                  <a href="#" class="hover:text-strongCyan">Privacy Policy</a>
+                </div>
+                <div>
+                  <a href="#" class="hover:text-strongCyan">Media Kit</a>
+                </div>
+              </div>
+              <!--menu2-->
+              <div class="flex flex-col space-y-4 text-center md:text-left">
+                <div>
+                  <a href="#" class="hover:text-strongCyan">Install Guide</a>
+                </div>
+              </div>
+            </div>
+            <!--social-->
+            <div class="flex justify-between w-32 py-1">
+              <a href="#"
+                ><img
+                  src="images/icon-facebook.svg"
+                  alt="facebook"
+                  class="duration-200 ficon"
+              /></a>
+              <a href="#"
+                ><img
+                  src="images/icon-twitter.svg"
+                  alt="twitter"
+                  class="duration-200 ficon"
+              /></a>
+              <a href="#"
+                ><img
+                  src="images/icon-instagram.svg"
+                  alt="instagram"
+                  class="duration-200 ficon"
+              /></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
