--- a/loopstudios/index.html
+++ b/loopstudios/index.html
@@ -63,5 +63,27 @@
         </div>
       </div>
     </section>
+    <!--feature section-->
+    <section id="feature">
+      <div
+        class="relative container flex flex-col max-w-6xl mx-auto my-32 px-6 text-gray-900 md:flex-row"
+      >
+        <img src="images/desktop/image-interactive.jpg" alt="interactive" />
+        <div
+          class="top-48 pr-0 bg-white md:absolute md:right-0 md:py-20 md:pl-20"
+        >
+          <h2
+            class="max-w-lg mt-10 mb-6 font-sans text-4xl text-center text-gray-900 uppercase md:text-5xl md:mt-0 md:text-left"
+          >
+            The leader in interactive vr
+          </h2>
+          <p class="max-w-md text-center md:text-left">
+            Founded by tom dick and harry in 2024. Delulu is Solulu. Our award
+            winning delulu have transformed many lives. Many problems is life
+            can solve with nice nap & being delulu
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
