creations section with gradient overlay

--- a/loopstudios/index.html
+++ b/loopstudios/index.html
@@ -85,5 +85,178 @@
         </div>
       </div>
     </section>
+    <!--creations section-->
+    <section id="creations">
+      <div class="container max-w-6xl mx-auto my-32 px-6 text-gray-900 md:px-0">
+        <!--creation header-->
+        <div class="flex justify-center mb-20 md:justify-between">
+          <h2 class="text-4xl text-center uppercse md:text-left md:text-5xl">
+            Our Creations
+          </h2>
+          <button class="hidden btn md:block">See All</button>
+        </div>
+        <!--creation items container-->
+        <div class="item-container">
+          <!--item1-->
+          <div class="group item">
+            <!--Desktop version image -->
+            <img
+              src="images/desktop/image-deep-earth.jpg"
+              alt="deep-earth"
+              class="hidden w-full duration-200 md:block group-hover:scale-110"
+            />
+            <!--Mobile version image -->
+            <img
+              src="images/mobile/image-deep-earth.jpg"
+              alt="deep-earth"
+              class="w-full md:hidden"
+            />
+            <!--itemGradient-->
+            <div class="item-gradient"></div>
+            <!--itemText-->
+            <h5>Deep Earth</h5>
+          </div>
+          <!--item2-->
+          <div class="group item">
+            <!--Desktop version image -->
+            <img
+              src="images/desktop/image-night-arcade.jpg"
+              alt="night-arcade"
+              class="hidden w-full duration-200 md:block group-hover:scale-110"
+            />
+            <!--Mobile version image -->
+            <img
+              src="images/mobile/image-night-arcade.jpg"
+              alt="night-arcade"
+              class="w-full md:hidden"
+            />
+            <!--itemGradient-->
+            <div class="item-gradient"></div>
+            <!--itemText-->
+            <h5>Night Arcade</h5>
+          </div>
+          <!--item3-->
+          <div class="group item">
+            <!--Desktop version image -->
+            <img
+              src="images/desktop/image-soccer-team.jpg"
+              alt="soccer-team"
+              class="hidden w-full duration-200 md:block group-hover:scale-110"
+            />
+            <!--Mobile version image -->
+            <img
+              src="images/mobile/image-soccer-team.jpg"
+              alt="deep-earth"
+              class="w-full md:hidden"
+            />
+            <!--itemGradient-->
+            <div class="item-gradient"></div>
+            <!--itemText-->
+            <h5>Football Team</h5>
+          </div>
+          <!--item4-->
+          <div class="group item">
+            <!--Desktop version image -->
+            <img
+              src="images/desktop/image-grid.jpg"
+              alt="the grid"
+              class="hidden w-full duration-200 md:block group-hover:scale-110"
+            />
+            <!--Mobile version image -->
+            <img
+              src="images/mobile/image-grid.jpg"
+              alt="the grid"
+              class="w-full md:hidden"
+            />
+            <!--itemGradient-->
+            <div class="item-gradient"></div>
+            <!--itemText-->
+            <h5>The Grid</h5>
+          </div>
+        </div>
+        <div class="item-container mt-10">
+          <!--item5-->
+          <div class="group item">
+            <!--Desktop version image -->
+            <img
+              src="images/desktop/image-from-above.jpg"
+              alt="Eagle View"
+              class="hidden w-full duration-200 md:block group-hover:scale-110"
+            />
+            <!--Mobile version image -->
+            <img
+              src="images/mobile/image-from-above.jpg"
+              alt="Eagle View"
+              class="w-full md:hidden"
+            />
+            <!--itemGradient-->
+            <div class="item-gradient"></div>
+            <!--itemText-->
+            <h5>From Up Above Eagle View</h5>
+          </div>
+          <!--item6-->
+          <div class="group item">
+            <!--Desktop version image -->
+            <img
+              src="images/desktop/image-pocket-borealis.jpg"
+              alt="borealis"
+              class="hidden w-full duration-200 md:block group-hover:scale-110"
+            />
+            <!--Mobile version image -->
+            <img
+              src="images/mobile/image-pocket-borealis.jpg"
+              alt="borealis"
+              class="w-full md:hidden"
+            />
+            <!--itemGradient-->
+            <div class="item-gradient"></div>
+            <!--itemText-->
+            <h5>Pocket Borealis</h5>
+          </div>
+          <!--item7-->
+          <div class="group item">
+            <!--Desktop version image -->
+            <img
+              src="images/desktop/image-curiosity.jpg"
+              alt="curiosity"
+              class="hidden w-full duration-200 md:block group-hover:scale-110"
+            />
+            <!--Mobile version image -->
+            <img
+              src="images/mobile/image-curiosity.jpg"
+              alt="curiosity"
+              class="w-full md:hidden"
+            />
+            <!--itemGradient-->
+            <div class="item-gradient"></div>
+            <!--itemText-->
+            <h5>The curiosity Rover</h5>
+          </div>
+          <!--item8-->
+          <div class="group item">
+            <!--Desktop version image -->
+            <img
+              src="images/desktop/image-fisheye.jpg"
+              alt="fisheye"
+              class="hidden w-full duration-200 md:block group-hover:scale-110"
+            />
+            <!--Mobile version image -->
+            <img
+              src="images/mobile/image-fisheye.jpg"
+              alt="fisheye"
+              class="w-full md:hidden"
+            />
+            <!--itemGradient-->
+            <div class="item-gradient"></div>
+            <!--itemText-->
+            <h5>Fish Eye view</h5>
+          </div>
+        </div>
+        <!--bottom button container-->
+        <div class="flex justify-center mt-10 md:hidden">
+          <button class="btn w-full md:hidden">See All</button>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
