--- a/loopstudios/index.html
+++ b/loopstudios/index.html
@@ -258,5 +258,105 @@
         </div>
       </div>
     </section>
+    <!--footer section-->
+    <footer class="bg-black">
+      <div class="container max-w-6xl py-10 mx-aut0">
+        <!--footer flex container-->
+        <div
+          class="flex flex-col items-center mb-8 space-y-6 md:flex-row md:space-y-0 md:justify-between md:items-start"
+        >
+          <!--footer menu and logo-->
+          <div
+            class="flex flex-col items-center space-y-8 md:items-start md:space-y-4"
+          >
+            <div class="h-8">
+              <img src="images/logo.svg" alt="" class="w-44 md:ml-3" />
+            </div>
+            <div
+              class="flex flex-col items-center space-y-4 font-bold text-white md:flex-row md:space-y-0 md:space-x-6 md:ml-3"
+            >
+              <div class="h-10 group">
+                <a href="#">About</a>
+                <div
+                  class="mx-2 group-hover:border-b group-hover:border-blue-50"
+                ></div>
+              </div>
+              <div class="h-10 group">
+                <a href="#">Careers</a>
+                <div
+                  class="mx-2 group-hover:border-b group-hover:border-blue-50"
+                ></div>
+              </div>
+              <div class="h-10 group">
+                <a href="#">Events</a>
+                <div
+                  class="mx-2 group-hover:border-b group-hover:border-blue-50"
+                ></div>
+              </div>
+              <div class="h-10 group">
+                <a href="#">Products</a>
+                <div
+                  class="mx-2 group-hover:border-b group-hover:border-blue-50"
+                ></div>
+              </div>
+              <div class="h-10 group">
+                <a href="#">Support</a>
+                <div
+                  class="mx-2 group-hover:border-b group-hover:border-blue-50"
+                ></div>
+              </div>
+            </div>
+          </div>
+          <!-- footer social-->
+          <div
+            class="flex flex-col items-start justify-between space-y-4 text-gray-500"
+          >
+            <div
+              class="flex items-center justify-center mx-auto space-x-4 md:justify-end md:mx-0"
+            >
+              <div class="h-8 group">
+                <a href="#">
+                  <img
+                    src="images/icon-facebook.svg"
+                    alt="facebook"
+                    class="h-6"
+                  />
+                </a>
+              </div>
+              <div class="h-8 group">
+                <a href="#">
+                  <img
+                    src="images/icon-instagram.svg"
+                    alt="instagram"
+                    class="h-6"
+                  />
+                </a>
+              </div>
+              <div class="h-8 group">
+                <a href="#">
+                  <img
+                    src="images/icon-pinterest.svg"
+                    alt="pinterest"
+                    class="h-6"
+                  />
+                </a>
+              </div>
+              <div class="h-8 group">
+                <a href="#">
+                  <img
+                    src="images/icon-twitter.svg"
+                    alt="twitter"
+                    class="h-6"
+                  />
+                </a>
+              </div>
+            </div>
+            <div class="font-bold">
+              &copy; 2024 loopstudios. All Right Reserved.
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
