--- a/loopstudios/index.html
+++ b/loopstudios/index.html
@@ -54,6 +54,17 @@
             </div>
           </div>
           <!--@TODO Hamburger Button-->
+          <div class="md:hidden">
+            <button
+              class="z-40 block hamburger md:hidden focus:outline-none"
+              id="menu-btn"
+              type="button"
+            >
+              <span class="hamburger-top"></span>
+              <span class="hamburger-middle"></span>
+              <span class="hamburger-bottom"></span>
+            </button>
+          </div>
         </nav>
         <!--@TODO Mobile Menu-->
         <div
