js link validation

--- a/shortly/index.html
+++ b/shortly/index.html
@@ -105,6 +105,11 @@
           >
             Shorten It!
           </button>
+          <!--form erroe msg-->
+          <div
+            class="absolute left-7 bottom-3 text-red text-sm italic"
+            id="err-msg"
+          ></div>
         </form>
         <!--link1-->
         <div
@@ -162,5 +167,6 @@
         </div>
       </div>
     </section>
+    <script src="js/index.js" defer></script>
   </body>
 </html>
