--- a/shortly/index.html
+++ b/shortly/index.html
@@ -167,6 +167,106 @@
         </div>
       </div>
     </section>
+    <!--stats section-->
+    <section id="stats" class="py-24 bg-gray-100">
+      <div class="container mx-auto px-3">
+        <h2 class="text-4xl mb-6 font-bold text-center">Advanced Statistics</h2>
+        <p class="max-w-xs mx-auto text-center text-gray-400 md:max-x-md">
+          Track how your links are performing across the web with our Advanced
+          AI Statistics dashboard.
+        </p>
+      </div>
+    </section>
+    <!--feature box section-->
+    <section id="feature-box" class="pb-32 bg-gray-100">
+      <div
+        class="relative container flex flex-col items-start px-6 mx-auto md:flex-row md:space-x-7"
+      >
+        <!--horizontal line(md)-->
+        <div
+          class="hidden absolute w-10/12 top-24 left-16 h-3 bg-cyan md:block"
+        ></div>
+        <!--Veritcal line(sm)-->
+        <div class="absolute w-2 left-1/2 h-full -ml-1 bg-cyan md:hidden"></div>
+        <!--box1-->
+        <div
+          class="relative flex flex-col p-6 space-y-6 bg-white rounded-lg md:w-1/3"
+        >
+          <div class="absolute -ml-10 left-1/2 -top-10 md:left-16">
+            <!--img container for bg and center it-->
+            <div
+              class="flex items-center justify-center w-20 h-20 p-4 rounded-full bg-veryDarkViolet"
+            >
+              <img
+                src="images/icon-brand-recognition.svg"
+                alt="brand recognition"
+              />
+            </div>
+          </div>
+          <h5
+            class="pt-6 text-xl font-bold text-center capitalize md:text-left"
+          >
+            Brand recognition
+          </h5>
+          <p class="text-center text-gray-400 md:text-left">
+            Boost your brand recognition with each click with our AI enabled
+            branded short links. Ai is everywhere so we are also milking it.
+          </p>
+        </div>
+        <!--box2-->
+        <div
+          class="relative flex flex-col p-6 space-y-6 bg-white rounded-lg mt-24 md:w-1/3 md:mt-8"
+        >
+          <div class="absolute -ml-10 left-1/2 -top-10 md:left-16">
+            <!--img container for bg and center it-->
+            <div
+              class="flex items-center justify-center w-20 h-20 p-4 rounded-full bg-veryDarkViolet"
+            >
+              <img
+                src="images/icon-detailed-records.svg"
+                alt="detailed records"
+              />
+            </div>
+          </div>
+          <h5
+            class="pt-6 text-xl font-bold text-center capitalize md:text-left"
+          >
+            Detailed Records
+          </h5>
+          <p class="text-center text-gray-400 md:text-left">
+            Gain insights into who is clicking your links, their online social
+            profile with our help from AI OSINT framework. Why someone pay
+            thousands of student loans for this open shit?
+          </p>
+        </div>
+        <!--box3-->
+        <div
+          class="relative flex flex-col p-6 space-y-6 bg-white rounded-lg mt-24 md:w-1/3 md:mt-16"
+        >
+          <div class="absolute -ml-10 left-1/2 -top-10 md:left-16">
+            <!--img container for bg and center it-->
+            <div
+              class="flex items-center justify-center w-20 h-20 p-4 rounded-full bg-veryDarkViolet"
+            >
+              <img
+                src="images/icon-fully-customizable.svg"
+                alt="fully customizable"
+              />
+            </div>
+          </div>
+          <h5
+            class="pt-6 text-xl font-bold text-center capitalize md:text-left"
+          >
+            fully customizable
+          </h5>
+          <p class="text-center text-gray-400 md:text-left">
+            Improve brand awareness with our AI powered bots to where and how
+            much/many links to paster in Celebs(actors/sports-person) forum or
+            social media accounts. Fully Customizable AI Power.
+          </p>
+        </div>
+      </div>
+    </section>
     <script src="js/index.js" defer></script>
   </body>
 </html>
