--- a/shortly/index.html
+++ b/shortly/index.html
@@ -267,6 +267,98 @@
         </div>
       </div>
     </section>
+    <!--cta section-->
+    <section id="cta" class="py-24 bg-darkViolet">
+      <div class="flex flex-col p-2 space-y-6">
+        <h6
+          class="max-auto space-y-10 text-4xl font-bold text-center text-white"
+        >
+          Boost your links with our AI Cow
+        </h6>
+        <button
+          class="px-10 py-5 mx-auto text-2xl font-bold text-white rounded-full bg-cyan hover:bg-cyanLight md:text-base md:py-3 focus:outline-none"
+        >
+          Get Started
+        </button>
+      </div>
+    </section>
+    <!--footer-->
+    <footer class="py-16 bg-veryDarkViolet">
+      <div
+        class="container flex flex-col items-center justify-between mx-auto space-y-16 md:flex-row md:space-y-0 md:items-start"
+      >
+        <!--logo-->
+        <img src="images/logo.svg" alt="logo" />
+        <!--MenuS container-->
+        <div
+          class="flex flex-col space-y-16 md:space-x-20 md:flex-row md:space-y-0"
+        >
+          <!--menu1-->
+          <div class="flex flex-col items-center w-full md:items-start">
+            <div class="mb-5 font-bold text-white capitalize">Features</div>
+            <div class="flex flex-col items-center space-y-3 md:items-start">
+              <a href="#" class="capitalize text-grayishViolet hover:text-cyan"
+                >link shortening</a
+              >
+              <a href="#" class="capitalize text-grayishViolet hover:text-cyan"
+                >branded links</a
+              >
+              <a href="#" class="capitalize text-grayishViolet hover:text-cyan"
+                >AI analytics</a
+              >
+            </div>
+          </div>
+          <!--menu2-->
+          <div class="flex flex-col items-center w-full md:items-start">
+            <div class="mb-5 font-bold text-white capitalize">Resources</div>
+            <div class="flex flex-col items-center space-y-3 md:items-start">
+              <a href="#" class="capitalize text-grayishViolet hover:text-cyan"
+                >blog</a
+              >
+              <a href="#" class="capitalize text-grayishViolet hover:text-cyan"
+                >developers</a
+              >
+              <a href="#" class="capitalize text-grayishViolet hover:text-cyan"
+                >support</a
+              >
+            </div>
+          </div>
+          <!--menu3-->
+          <div class="flex flex-col items-center w-full md:items-start">
+            <div class="mb-5 font-bold text-white capitalize">Company</div>
+            <div class="flex flex-col items-center space-y-3 md:items-start">
+              <a href="#" class="capitalize text-grayishViolet hover:text-cyan"
+                >about</a
+              >
+              <a href="#" class="capitalize text-grayishViolet hover:text-cyan"
+                >our team</a
+              >
+              <a href="#" class="capitalize text-grayishViolet hover:text-cyan"
+                >careers</a
+              >
+              <a href="#" class="capitalize text-grayishViolet hover:text-cyan"
+                >contact</a
+              >
+            </div>
+          </div>
+        </div>
+        <!--social-->
+        <div class="flex space-x-6">
+          <a href="#"
+            ><img src="images/icon-facebook.svg" alt="facebook" class="ficon"
+          /></a>
+          <a href="#"
+            ><img src="images/icon-instagram.svg" alt="instagram" class="ficon"
+          /></a>
+          <a href="#"
+            ><img src="images/icon-pinterest.svg" alt="pinterest" class="ficon"
+          /></a>
+          <a href="#"
+            ><img src="images/icon-twitter.svg" alt="twitter" class="ficon"
+          /></a>
+        </div>
+      </div>
+    </footer>
     <script src="js/index.js" defer></script>
   </body>
 </html>
