--- a/shortly/index.html
+++ b/shortly/index.html
@@ -49,9 +49,38 @@
             >Sign Up</a
           >
         </div>
-        <!--@TODO: Hamburger Menu-->
+        <!--Hamburger Button(mobile)-->
+        <div class="lg:hidden">
+          <button
+            class="block hamburger lg:hidden focus:outline-none"
+            id="menu-btn"
+            type="button"
+          >
+            <span class="hamburger-top"></span>
+            <span class="hamburger-middle"></span>
+            <span class="hamburger-bottom"></span>
+          </button>
+        </div>
       </div>
-      <!--@TODO: Mobile Menu-->
+      <!--Mobile Menu-->
+      <div
+        id="menu"
+        class="absolute hidden p-6 rounded-lg bg-darkViolet left-6 right-6 top-20 z-50"
+      >
+        <div
+          class="flex flex-col items-center justify-center w-full space-y-6 font-bold text-white rounded-sm"
+        >
+          <a href="#" class="w-full text-center">Features</a>
+          <a href="#" class="w-full text-center">Pricing</a>
+          <a href="#" class="w-full text-center">Resources</a>
+          <a href="#" class="w-full text-center pt-6 border-t border-gray-400"
+            >Login</a
+          >
+          <a href="#" class="w-full text-center py-3 rounded-full bg-cyan"
+            >Sign Up</a
+          >
+        </div>
+      </div>
     </nav>
     <!--Hero section-->
     <section id="hero">
