create other boxes for small screens

--- a/testimonialGrid/index.html
+++ b/testimonialGrid/index.html
@@ -19,7 +19,7 @@
       <!--Grid Container-->
       <div class="text-white">
         <!--Box 1-->
-        <div class="relative p-10 rounde-xl bg-purple-700">
+        <div class="relative p-10 rounded-xl bg-purple-700">
           <!--Quotes image-->
           <img
             src="images/bg-pattern-quotation.svg"
@@ -34,7 +34,7 @@
               class="w-10 h-10 rounded-full ring-2 ring-purple-300"
             />
             <div class="text-sm">
-              <h4 class="opacity-90">Daniel Radcliffe</h4>
+              <h4 class="opacity-90">Harry Potter</h4>
               <p class="opacity-50">Boy who lived</p>
             </div>
           </div>
@@ -61,7 +61,156 @@
             discovered my true potential and unlocked the door to a world of
             endless possibilities. I am forever grateful for the transformative
             experience that has allowed me to wield the magic of programming and
-            embark on a new journey in the realm of technology."
+            embark on a new journey in the realm of technology. Ms-Excel rocks!!
+            I have more Golds still this experience was wroth more than Gold"
+          </p>
+        </div>
+        <!--Box 2-->
+        <div class="p-10 rounded-xl bg-gray-600">
+          <!--Box Header-->
+          <div class="flex space-x-4">
+            <img
+              src="images/image-jonathan.jpg"
+              alt="jonathan"
+              class="w-10 h-10 rounded-full ring-2 ring-purple-300"
+            />
+            <div class="text-sm">
+              <h4 class="opacity-90">Vincent Crabbe</h4>
+              <p class="opacity-50">Boy who changed race</p>
+            </div>
+          </div>
+          <!--Large Text-->
+          <p class="relative mt-6 text-xl">
+            The London roits muggle team was very supportive and kept me
+            motivated
+          </p>
+          <!--Small Text-->
+          <p class="mt-6 opacity-60">
+            "I was white mate from london before Hogwarts year. While living as
+            muggle, at age of 9 I was hit by car. From that time my
+            transformation to black men began. London was too white. With London
+            roits team support I was able to complete my transformation to black
+            bruv."
+          </p>
+        </div>
+        <!--Box 3-->
+        <div class="hidden p-10 rounded-xl bg-white text-gray-900">
+          <!--Box Header-->
+          <div class="flex space-x-4">
+            <img
+              src="images/image-kira.jpg"
+              alt="kira"
+              class="w-10 h-10 rounded-full ring-2 ring-purple-300"
+            />
+            <div class="text-sm">
+              <h4 class="opacity-90">Hermione Granger</h4>
+              <p class="opacity-50">Muggle Girl who Rule</p>
+            </div>
+          </div>
+          <!--Large Text-->
+          <p class="relative mt-6 text-xl">
+            Such a life-changing experience. Highly recommended! Great for
+            counter Colonization. Innit!
+          </p>
+          <!--Small Text-->
+          <p class="mt-6 opacity-60">
+            "Before joining the Hogwarts, they thought I've never written a line
+            of magic code. Oh boy! they were wrong. Hogwarts passouts have magic
+            but us muggles we have knife in london. Moreover, I visisted my
+            cousin in USA and bought guns. Boy! hogwarts magic were no match for
+            it. In fact, I've often referred to it during interviews as an
+            example of my both world experience. It certainly helped me land a
+            job as a Howgarts Principle after receiving multiple offers. 100%
+            recommend!"
+          </p>
+        </div>
+        <!--Box 4-->
+        <div class="p-10 rounded-xl bg-white text-gray-900">
+          <!--Box Header-->
+          <div class="flex space-x-4">
+            <img
+              src="images/image-jeanette.jpg"
+              alt="image-jeanette"
+              class="w-10 h-10 rounded-full ring-2 ring-purple-300"
+            />
+            <div class="text-sm">
+              <h4 class="opacity-90">Ginny Weasley</h4>
+              <p class="opacity-50">FlowerPot for Powerful witch</p>
+            </div>
+          </div>
+          <!--Large Text-->
+          <p class="relative mt-6 text-xl">
+            An overall wonderful and rewarding experience from Powerful witch to
+            Muggle housewife.
+          </p>
+          <!--Small Text-->
+          <p class="mt-6 opacity-60">
+            "Thank you for the wonderful experience! I now have a job I really
+            enjoy, and make a good living while doing something I love. Bruv!
+            from powerful witch to Muggle housewife. Golden muggle life"
+          </p>
+        </div>
+        <!--Box 5-->
+        <div class="p-10 rounded-xl bg-gray-900">
+          <!--Box Header-->
+          <div class="flex space-x-4">
+            <img
+              src="images/image-patrick.jpg"
+              alt="patrick"
+              class="w-10 h-10 rounded-full ring-2 ring-purple-300"
+            />
+            <div class="text-sm">
+              <h4 class="opacity-90">Ron Weasley</h4>
+              <p class="opacity-50">PureBlood to Muggle Husband</p>
+            </div>
+          </div>
+          <!--Large Text-->
+          <p class="relative mt-6 text-xl">
+            Awesome teaching support from TAs who did the bootcamp themselves.
+            Getting guidance from them and learning from their experiences was
+            easy.
+          </p>
+          <!--Small Text-->
+          <p class="mt-6 opacity-60">
+            "The muggle witch TA's seem genuinely concerned about my progress
+            which I find really refreshing. The program gave me the confidence
+            necessary to be able to go out in the world and present myself as a
+            capable muggle husband, hey my muggle wife is Principle of Hogwarts.
+            Also on personal note, met hot now rich muggle wife and goldy rich
+            pureblood friend, so I can live peacefuly in both worlds."
+          </p>
+        </div>
+        <!--Box 6(in small screen)-->
+        <div class="p-10 rounded-xl bg-white text-gray-900">
+          <!--Box Header-->
+          <div class="flex space-x-4">
+            <img
+              src="images/image-kira.jpg"
+              alt="kira"
+              class="w-10 h-10 rounded-full ring-2 ring-purple-300"
+            />
+            <div class="text-sm">
+              <h4 class="opacity-90">Hermione Granger</h4>
+              <p class="opacity-50">Muggle Girl who Rule</p>
+            </div>
+          </div>
+          <!--Large Text-->
+          <p class="relative mt-6 text-xl">
+            Such a life-changing experience. Highly recommended! Great for
+            counter Colonization. Innit!
+          </p>
+          <!--Small Text-->
+          <p class="mt-6 opacity-60">
+            "Before joining the Hogwarts, they thought I've never written a line
+            of magic code. Oh boy! they were wrong. Hogwarts passouts have magic
+            but us muggles we have knife in london. Moreover, I visisted my
+            cousin in USA and bought guns. Boy! hogwarts magic were no match for
+            it. In fact, I've often referred to it during interviews as an
+            example of my both world experience. It certainly helped me land a
+            job as a Howgarts Principle after receiving multiple offers. 100%
+            recommend! Also learn some guns magic from likes of USA cousins. It
+            will help like silver bullets dip in holy water for Vamps if your
+            magic wand is broken. Best of both worlds!"
           </p>
         </div>
       </div>
