add tailwind GRID class

--- a/testimonialGrid/index.html
+++ b/testimonialGrid/index.html
@@ -17,9 +17,11 @@
     <!--Global Container-->
     <div class="container mx-auto max-w-7xl p-2 md:p-10">
       <!--Grid Container-->
-      <div class="text-white">
+      <div
+        class="text-white grid gap-6 grid-cols-1 md:grid-cols-4 md:grid-rows-2"
+      >
         <!--Box 1-->
-        <div class="relative p-10 rounded-xl bg-purple-700">
+        <div class="relative p-10 rounded-xl bg-purple-700 md:col-span-2">
           <!--Quotes image-->
           <img
             src="images/bg-pattern-quotation.svg"
@@ -94,7 +96,9 @@
           </p>
         </div>
         <!--Box 3-->
-        <div class="hidden p-10 rounded-xl bg-white text-gray-900">
+        <div
+          class="hidden p-10 rounded-xl bg-white text-gray-900 md:block md:row-span-2"
+        >
           <!--Box Header-->
           <div class="flex space-x-4">
             <img
@@ -116,12 +120,36 @@
           <p class="mt-6 opacity-60">
             "Before joining the Hogwarts, they thought I've never written a line
             of magic code. Oh boy! they were wrong. Hogwarts passouts have magic
-            but us muggles we have knife in london. Moreover, I visisted my
-            cousin in USA and bought guns. Boy! hogwarts magic were no match for
-            it. In fact, I've often referred to it during interviews as an
-            example of my both world experience. It certainly helped me land a
-            job as a Howgarts Principle after receiving multiple offers. 100%
-            recommend!"
+            but us muggles we have knife in london. Moreover, I visited my
+            cousin in USA and bought/taught myself guns. Boy! hogwarts magic
+            were no match for it. In fact, I've often referred to it during
+            interviews as an example of my both world experience. It certainly
+            helped me land a job as a Howgarts Principle after receiving
+            multiple offers. <br />100% recommend! <br />Also learn some guns
+            magic from likes of USA cousins. It will help like silver bullets
+            dip in holy water for Vamps if your magic wand is broken. Best of
+            both worlds!
+            <br />
+            Some magic to you muggles who like to be in Hogwarts.<br />
+            Although it may not have the same effect in the Muggle world as it
+            does in the wizarding world, I can guide you through the incantation
+            and technique.
+            <br />1. First, stand in a comfortable position with your feet
+            shoulder-width apart. Imagine the object you want to levitate in
+            front of you. It could be a small item like a feather or a pencil to
+            start with.<br />2. Extend your arm, pointing your wand or imaginary
+            wand towards the object. Focus your mind on the concept of
+            levitation, envisioning the object floating in the air.<br />3. Now,
+            with confidence and a clear pronunciation, say the incantation,
+            "Wingardium Leviosa." Remember to emphasize the "gar" syllable.<br />4.
+            As you pronounce the incantation, make a swishing motion with your
+            wand or your hand, as if flicking it upwards. <br />5. Imagine a
+            gentle upward force lifting the object, defying gravity.<br />
+            While it's important to note that this spell won't actually levitate
+            objects in the Muggle world, it can be a fun way to embrace your
+            inner Hermione Granger and engage in imaginative play. Remember, the
+            true magic lies in the power of your imagination and creativity.
+            Now, go ahead and give it a try! "Wingardium Leviosa!"
           </p>
         </div>
         <!--Box 4-->
@@ -151,7 +179,7 @@
           </p>
         </div>
         <!--Box 5-->
-        <div class="p-10 rounded-xl bg-gray-900">
+        <div class="p-10 rounded-xl bg-gray-900 md:col-span-2">
           <!--Box Header-->
           <div class="flex space-x-4">
             <img
@@ -181,7 +209,7 @@
           </p>
         </div>
         <!--Box 6(in small screen)-->
-        <div class="p-10 rounded-xl bg-white text-gray-900">
+        <div class="p-10 rounded-xl bg-white text-gray-900 md:hidden">
           <!--Box Header-->
           <div class="flex space-x-4">
             <img
@@ -203,14 +231,36 @@
           <p class="mt-6 opacity-60">
             "Before joining the Hogwarts, they thought I've never written a line
             of magic code. Oh boy! they were wrong. Hogwarts passouts have magic
-            but us muggles we have knife in london. Moreover, I visisted my
-            cousin in USA and bought guns. Boy! hogwarts magic were no match for
-            it. In fact, I've often referred to it during interviews as an
-            example of my both world experience. It certainly helped me land a
-            job as a Howgarts Principle after receiving multiple offers. 100%
-            recommend! Also learn some guns magic from likes of USA cousins. It
-            will help like silver bullets dip in holy water for Vamps if your
-            magic wand is broken. Best of both worlds!"
+            but us muggles we have knife in london. Moreover, I visited my
+            cousin in USA and bought/taught myself guns. Boy! hogwarts magic
+            were no match for it. In fact, I've often referred to it during
+            interviews as an example of my both world experience. It certainly
+            helped me land a job as a Howgarts Principle after receiving
+            multiple offers. <br />100% recommend! <br />Also learn some guns
+            magic from likes of USA cousins. It will help like silver bullets
+            dip in holy water for Vamps if your magic wand is broken. Best of
+            both worlds!
+            <br />
+            Some magic to you muggles who like to be in Hogwarts.<br />
+            Although it may not have the same effect in the Muggle world as it
+            does in the wizarding world, I can guide you through the incantation
+            and technique.
+            <br />1. First, stand in a comfortable position with your feet
+            shoulder-width apart. Imagine the object you want to levitate in
+            front of you. It could be a small item like a feather or a pencil to
+            start with.<br />2. Extend your arm, pointing your wand or imaginary
+            wand towards the object. Focus your mind on the concept of
+            levitation, envisioning the object floating in the air.<br />3. Now,
+            with confidence and a clear pronunciation, say the incantation,
+            "Wingardium Leviosa." Remember to emphasize the "gar" syllable.<br />4.
+            As you pronounce the incantation, make a swishing motion with your
+            wand or your hand, as if flicking it upwards. <br />5. Imagine a
+            gentle upward force lifting the object, defying gravity.<br />
+            While it's important to note that this spell won't actually levitate
+            objects in the Muggle world, it can be a fun way to embrace your
+            inner Hermione Granger and engage in imaginative play. Remember, the
+            true magic lies in the power of your imagination and creativity.
+            Now, go ahead and give it a try! "Wingardium Leviosa!"
           </p>
         </div>
       </div>
