line-clamp in tailwind css

--- a/testimonialGrid/index.html
+++ b/testimonialGrid/index.html
@@ -49,10 +49,11 @@
             relevant but even more cutting-edge in the company I joined. It was
             as if I had brought a piece of the magical world with me, and I
             couldn't help but feel that I had truly received every penny's worth
-            of my education."
+            of my education. <br />Ms-Excel Developer! Developer! Developer!
+            Developer! Developer! Developer! Golden Bruv,innit?"
           </p>
           <!--Small Text-->
-          <p class="mt-6 opacity-60">
+          <p class="mt-6 opacity-60 line-clamp-6">
             "I was an living in basement for many years before I joined the
             Hogwarts. Intrigued and with gold coins my parents left me, I
             decided to dip my toes in the magical waters by signing up for the
@@ -87,7 +88,7 @@
             motivated
           </p>
           <!--Small Text-->
-          <p class="mt-6 opacity-60">
+          <p class="mt-6 opacity-60 line-clamp-none">
             "I was white mate from london before Hogwarts year. While living as
             muggle, at age of 9 I was hit by car. From that time my
             transformation to black men began. London was too white. With London
@@ -117,7 +118,7 @@
             counter Colonization. Innit!
           </p>
           <!--Small Text-->
-          <p class="mt-6 opacity-60">
+          <p class="mt-6 opacity-60 line-clamp-18">
             "Before joining the Hogwarts, they thought I've never written a line
             of magic code. Oh boy! they were wrong. Hogwarts passouts have magic
             but us muggles we have knife in london. Moreover, I visited my
@@ -172,7 +173,7 @@
             Muggle housewife.
           </p>
           <!--Small Text-->
-          <p class="mt-6 opacity-60">
+          <p class="mt-6 opacity-60 line-clamp-6 md:line-clamp-7">
             "Thank you for the wonderful experience! I now have a job I really
             enjoy, and make a good living while doing something I love. Bruv!
             from powerful witch to Muggle housewife. Golden muggle life"
@@ -199,7 +200,7 @@
             easy.
           </p>
           <!--Small Text-->
-          <p class="mt-6 opacity-60">
+          <p class="mt-6 opacity-60 line-clamp-6">
             "The muggle witch TA's seem genuinely concerned about my progress
             which I find really refreshing. The program gave me the confidence
             necessary to be able to go out in the world and present myself as a
@@ -228,7 +229,7 @@
             counter Colonization. Innit!
           </p>
           <!--Small Text-->
-          <p class="mt-6 opacity-60">
+          <p class="mt-6 opacity-60 line-clamp-6">
             "Before joining the Hogwarts, they thought I've never written a line
             of magic code. Oh boy! they were wrong. Hogwarts passouts have magic
             but us muggles we have knife in london. Moreover, I visited my
