--- a/FlyoColorPicker/index.html
+++ b/FlyoColorPicker/index.html
@@ -99,5 +99,71 @@
         </button>
       </div>
     </section>
+    <!--Features section-->
+    <section id="features" class="pt-12 bg-gray-50 dark:bg-darkBlue1">
+      <div class="container mx-auto px-6 pb-32">
+        <!-- 1st row-->
+        <div
+          class="flex flex-col space-y-24 text-center md:flex-row md:space-y-0"
+        >
+          <!--1st row : first item-->
+          <div class="flex flex-col items-center space-y-2 md:w-1/2">
+            <div class="flex items-center justify-center h-24 mb-6">
+              <img
+                src="images/icon-access-anywhere.svg"
+                alt="Access anywhere"
+              />
+            </div>
+            <h3 class="text-x font-bold">Access your file from anywhere</h3>
+            <p class="max-w-md">
+              The ability to use a smartphone, tablet, or computer to access
+              your account means your files follow you everywhere.
+            </p>
+          </div>
+          <!--1st row : second item-->
+          <div class="flex flex-col items-center space-y-2 md:w-1/2">
+            <div class="flex items-center justify-center h-24 mb-6">
+              <img src="images/icon-security.svg" alt="security anywhere" />
+            </div>
+            <h3 class="text-x font-bold">Security you can trust</h3>
+            <p class="max-w-md">
+              2-factor authentication and user-controlled encryption are just a
+              couple of the security features we allow to help secure your
+              files.
+            </p>
+          </div>
+        </div>
+        <!-- 2nd row-->
+        <div
+          class="flex flex-col space-y-24 text-center md:flex-row md:space-y-0 mt-28"
+        >
+          <!--2nd row : first item-->
+          <div class="flex flex-col items-center space-y-2 md:w-1/2">
+            <div class="flex items-center justify-center h-24 mb-6">
+              <img
+                src="images/icon-collaboration.svg"
+                alt="collaboration anywhere"
+              />
+            </div>
+            <h3 class="text-x font-bold">Access your team file</h3>
+            <p class="max-w-md">
+              The ability to allow access to your file or to access files from
+              your team mates. #collaboration
+            </p>
+          </div>
+          <!--2nd row : second item-->
+          <div class="flex flex-col items-center space-y-2 md:w-1/2">
+            <div class="flex items-center justify-center h-24 mb-6">
+              <img src="images/icon-any-file.svg" alt="security anywhere" />
+            </div>
+            <h3 class="text-x font-bold">Multiple Secure Backup</h3>
+            <p class="max-w-md">
+              2-factor authentication and user-controlled encryption in cloud
+              storage facility.#cloud #peoplecomputer
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
