--- a/FlyoColorPicker/index.html
+++ b/FlyoColorPicker/index.html
@@ -202,5 +202,84 @@
         </div>
       </div>
     </section>
+    <!--testimonials section-->
+    <section id="testimonials" class="bg-gray-50 dark:bg-darkBlue">
+      <div class="container mx-auto px-6 pt-12 pb-80 md:pb-96">
+        <!--testimonialS boxeS-->
+        <div
+          class="relative flex flex-col w-full space-y-6 md:flex-row md:space-y-0 md:space-x-12"
+        >
+          <!--Quotes img-->
+          <img
+            src="images/bg-quotes.png"
+            alt=""
+            class="absolute left-1 -top-2 w-10 md:-top-16 md:w-20"
+          />
+          <!--Box 1-->
+          <div
+            class="flex flex-col p-10 space-y-6 rounded-lg md:w-1/3 bg-gray-100 dark:bg-darkBlue3"
+          >
+            <p class="text-sm leading-5 md:text-lg">
+              Fylo has improved our team productivity by an order of magnitude.
+              Since making the switch our team has become a well-oiled
+              collaboration machine.
+            </p>
+            <div class="flex space-x-4">
+              <img
+                src="images/profile-1.jpg"
+                alt=""
+                class="w-10 h-10 rounded-full"
+              />
+              <div>
+                <h5 class="text-sm font-semibold">Dokla Patel</h5>
+                <p class="text-xs font-extralight">Founder: gujju Business</p>
+              </div>
+            </div>
+          </div>
+          <!--Box 2-->
+          <div
+            class="flex flex-col p-10 space-y-6 rounded-lg md:w-1/3 bg-gray-100 dark:bg-darkBlue3"
+          >
+            <p class="text-sm leading-5 md:text-lg">
+              Fylo has improved our team productivity by an order of magnitude.
+              Since making the switch our team has become a well-oiled
+              collaboration machine.
+            </p>
+            <div class="flex space-x-4">
+              <img
+                src="images/profile-2.jpg"
+                alt=""
+                class="w-10 h-10 rounded-full"
+              />
+              <div>
+                <h5 class="text-sm font-semibold">John Doe White</h5>
+                <p class="text-xs font-extralight">Founder: White Software</p>
+              </div>
+            </div>
+          </div>
+          <!--Box 3-->
+          <div
+            class="flex flex-col p-10 space-y-6 rounded-lg md:w-1/3 bg-gray-100 dark:bg-darkBlue3"
+          >
+            <p class="text-sm leading-5 md:text-lg">
+              Fylo has improved our team productivity by an order of magnitude.
+              Since making the switch our team has become a well-oiled
+              collaboration machine.
+            </p>
+            <div class="flex space-x-4">
+              <img
+                src="images/profile-3.jpg"
+                alt=""
+                class="w-10 h-10 rounded-full"
+              />
+              <div>
+                <h5 class="text-sm font-semibold">Jane Doe White</h5>
+                <p class="text-xs font-extralight">Founder: HuffPost Editor</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
