--- a/FlyoColorPicker/index.html
+++ b/FlyoColorPicker/index.html
@@ -310,5 +310,76 @@
         </div>
       </div>
     </section>
+    <!--footer section-->
+    <footer class="bg-darkBlue">
+      <div class="container mx-auto px-5 pb-10">
+        <!--All items-->
+        <div
+          class="flex flex-col justify-between space-y-24 md:flex-row md:space-y-0"
+        >
+          <!--email/phone-->
+          <div class="mt-10 space-y-10">
+            <div class="flex items-center space-x-3 md:-mt-10">
+              <div class="w-6">
+                <img src="images/icon-phone.svg" alt="phone" class="scale-10" />
+              </div>
+              <div>+1 703-571-3343</div>
+            </div>
+            <div class="flex items-center space-x-3 md:-mt-10">
+              <div class="w-6">
+                <img src="images/icon-email.svg" alt="email" class="scale-10" />
+              </div>
+              <div>nine11@pentagon.com</div>
+            </div>
+          </div>
+          <!--Menus-->
+          <div
+            class="flex flex-col space-y-10 text-xl md:text-base md:space-x-20 md:space-y-0 md:flex-row"
+          >
+            <div class="flex flex-col space-y-3">
+              <a href="#">About</a>
+              <a href="#">Jobs</a>
+              <a href="#">Press</a>
+              <a href="#">Blog</a>
+            </div>
+            <div class="flex flex-col space-y-3">
+              <a href="#">Contact Us</a>
+              <a href="#">Terms</a>
+              <a href="#">Privacy</a>
+            </div>
+          </div>
+          <!--socials-->
+          <div class="flex justify-center pb-10 space-x-3">
+            <div>
+              <a href="#">
+                <img
+                  src="images/facebook.svg"
+                  alt="facebook"
+                  class="p-2 bg-darkBlue rounded-full ficon"
+                />
+              </a>
+            </div>
+            <div>
+              <a href="#">
+                <img
+                  src="images/twitter.svg"
+                  alt="twitter"
+                  class="p-2 bg-darkBlue rounded-full ficon"
+                />
+              </a>
+            </div>
+            <div>
+              <a href="#">
+                <img
+                  src="images/instagram.svg"
+                  alt="instagram"
+                  class="p-2 bg-darkBlue rounded-full ficon"
+                />
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
