--- a/FlyoColorPicker/index.html
+++ b/FlyoColorPicker/index.html
@@ -311,8 +311,8 @@
       </div>
     </section>
     <!--footer section-->
-    <footer class="bg-darkBlue">
-      <div class="container mx-auto px-5 pb-10">
+    <footer class="bg-darkBlue text-white">
+      <div class="container mx-auto px-5 pb-10 pt-10">
         <!--All items-->
         <div
           class="flex flex-col justify-between space-y-24 md:flex-row md:space-y-0"
