--- a/bookmarkManager/index.html
+++ b/bookmarkManager/index.html
@@ -13,8 +13,33 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Bookmark Manager</title>
   </head>
-  <body>
-    <h1 class="text-4xl mb-4">Welcome</h1>
-    <p>Start building your Tailwind project</p>
+  <body class="overflow-x-hidden">
+    <!--navbar-->
+    <nav class="container relative mx-auto p-6">
+      <!--flex container for Nav items-->
+      <div class="flex items-center justify-between space-x-20 my-6">
+        <!--logo-->
+        <div class="z-30">
+          <img src="images/logo-bookmark.svg" alt="logo" />
+        </div>
+        <!--menu item-->
+        <div
+          class="hidden items-center space-x-10 uppercase text-grayishBlue md:flex"
+        >
+          <a href="#features" class="tracking-widest hover:text-softRed"
+            >Features</a
+          >
+          <a href="#download" class="tracking-widest hover:text-softRed"
+            >Download</a
+          >
+          <a href="#faq" class="tracking-widest hover:text-softRed">Faq</a>
+          <a
+            href="#"
+            class="px-8 py-2 text-white bg-softRed border-2 border-softRed rounded-lg shadow-md hover:text-softRed hover:bg-white"
+            >Login</a
+          >
+        </div>
+      </div>
+    </nav>
   </body>
 </html>
