--- a/bookmarkManager/index.html
+++ b/bookmarkManager/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="js/index.js" defer></script>
     <title>Bookmark Manager</title>
   </head>
   <body class="overflow-x-hidden">
