--- a/bookmarkManager/index.html
+++ b/bookmarkManager/index.html
@@ -237,5 +237,88 @@
       </div>
     </section>
     <!--Features/Tabs Section ENDS-->
+    <!--Download Section-->
+    <!--Download Section Header-->
+    <section id="download">
+      <div class="container mx-auto px-6">
+        <h2 class="mb-6 text-3xl font-semibold text-center md:text-4xl">
+          Download the Extension
+        </h2>
+        <p class="max-w-lg mx-auto text-center text-grayishBlue">
+          We've got more browsers in the pipeline. Please do let us know if
+          you've got a favourite you'd like us to prioritize.
+        </p>
+      </div>
+    </section>
+    <!--Download Section Boxes-->
+    <section id="download-boxes" class="py-32">
+      <!--box Container-->
+      <div
+        class="relative flex flex-col items-center max-w-5xl mx-auto space-y-10 px-10 md:px-6 md:space-y-0 md:space-x-7 md:flex-row"
+      >
+        <!--Box1-->
+        <div
+          class="flex flex-col w-full py-6 space-y-4 text-center rounded-lg shadow-lg md:w-1/3"
+        >
+          <!--image-->
+          <div class="flex justify-center">
+            <img src="images/logo-chrome.svg" alt="chrome" />
+          </div>
+          <!--text-->
+          <h5 class="pt-6 text-xl font-bold">Add to Chrome</h5>
+          <p class="text-gray-400">Minimum version 69</p>
+          <div class="bg-dots bg-repeat-x px-6 pt-6 capitalize">
+            <a
+              href="#"
+              class="block w-full text-white bg-softBlue py-3 rounded-lg border-2 border-softBlue duration-200 hover:text-softBlue hover:bg-white"
+              >Add & Install Extension</a
+            >
+          </div>
+        </div>
+        <!--Box2-->
+        <div class="w-full md:w-1/3">
+          <div
+            class="flex flex-col w-full py-6 space-y-4 text-center rounded-lg shadow-lg md:mt-8"
+          >
+            <!--image-->
+            <div class="flex justify-center">
+              <img src="images/logo-firefox.svg" alt="Firefox" />
+            </div>
+            <!--text-->
+            <h5 class="pt-6 text-xl font-bold">Add to Firefox</h5>
+            <p class="text-gray-400">Minimum version 69</p>
+            <div class="bg-dots bg-repeat-x px-6 pt-6 capitalize">
+              <a
+                href="#"
+                class="block w-full text-white bg-softBlue py-3 rounded-lg border-2 border-softBlue duration-200 hover:text-softBlue hover:bg-white"
+                >Add & Install Extension</a
+              >
+            </div>
+          </div>
+        </div>
+        <!--Box3-->
+        <div class="w-full md:w-1/3">
+          <div
+            class="flex flex-col w-full py-6 space-y-4 text-center rounded-lg shadow-lg md:mt-16"
+          >
+            <!--image-->
+            <div class="flex justify-center">
+              <img src="images/logo-opera.svg" alt="opera" />
+            </div>
+            <!--text-->
+            <h5 class="pt-6 text-xl font-bold">Add to Opera</h5>
+            <p class="text-gray-400">Minimum version 69</p>
+            <div class="bg-dots bg-repeat-x px-6 pt-6 capitalize">
+              <a
+                href="#"
+                class="block w-full text-white bg-softBlue py-3 rounded-lg border-2 border-softBlue duration-200 hover:text-softBlue hover:bg-white"
+                >Add & Install Extension</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--Download Section Ends-->
   </body>
 </html>
